--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,20 @@
             <div class="container">
                  {% if businesses %} 
                   <h1>These are the top restaurants for {{place}}:</h1>
+                
+                    <div class="col-md-2"> <b>Name</b></div>
+                    <div class="col-md-2"> <b>Rating</b> </div>
+                    <div class="col-md-8"> <b>Phone Number</b> </div>
+                    
+                        {%for businesses in businesses%} 
+                        <div class="col-md-2">{{businesses.name}}</div>
+                        <div class="col-md-2">{{businesses.rating}}</div>
+                        <div class="col-md-8"> {{businesses.phone}}</div>
+                        {% endfor %}  
 
-                  {%for businesses in businesses%} 
-            
-                   <h3> {{businesses.name}} {{businesses.rating}} {{businesses.phone}}</h3>
-                {% endfor %} 
-               
-
-              {% else %}
-                    <h1>where do you want food recommendations for?</h1>
+              
+                {% else %}
+                    <h1>Which city do you want food recommendations for?</h1>
                     <form action="/" class="form-inline">
                         <div class="form-group">
                             <input type="text" name="place" placeholder="city, state" class="form-control">
@@ -24,10 +29,11 @@
                     </form>
                 {% endif %}
 
+               
+                <a href="{{ url_for('index') }}"> Look up another address</a> </br>
+                <a href="{{ url_for('about') }}">About this project</a> </br>
+                <a href="http://www.yelp.com"> Click here to rate us on Yelp</a>
 
-
-                <a href="{{ url_for('index') }}">Look up another address</a> <br/>
-                <a href="{{ url_for('about') }}">About this project</a>
             </div>
         </div>
     </body>
